SFDCProject/src/objects/Generation_Assets__c.object
<CustomObject>
    <fields>
        <fullName>Have_PTO_Letter__c</fullName>
        <label>Have PTO Letter?</label>
        <picklist>
            <controllingField>Utility_Company__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <description>Address for this SunRun home</description>
        <label>Home Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Type__c</fullName>
        <label>Home Type</label>
        <picklist>
            <picklistValues>
                <fullName>Detached single family home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertically-split duplex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Townhome / rowhome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single-family detached home in condo development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Value__c</fullName>
        <description>Documents the value of the home as indicated by Zillow.</description>
        <inlineHelpText>What is the Zillow home value for this address?</inlineHelpText>
        <label>Home Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_TE_fund__c</fullName>
        <inlineHelpText>Date the facility has been sold into the TE fund</inlineHelpText>
        <label>In TE fund</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Deposit_Amount_Received__c</fullName>
        <label>Initial Deposit Amount Received</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Deposit_Amount__c</fullName>
        <label>Initial Deposit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Deposit_Method__c</fullName>
        <description>How the customer paid their initial deposit ($1K)</description>
        <inlineHelpText>How the customer paid their initial deposit ($1K)</inlineHelpText>
        <label>Initial Deposit Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid to REC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Deposit_Processed__c</fullName>
        <description>Date Finance received the customer&apos;s deposit check</description>
        <inlineHelpText>Date Finance received the customer&apos;s deposit check</inlineHelpText>
        <label>Initial Deposit Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Call__c</fullName>
        <description>Call customer at the close of installation to check in on install progress and inform them of PTO process</description>
        <inlineHelpText>Date we called customer to check in on how the install went and make sure they know about PTO process.  Should be triggered by our first proof that install has begun (meter test, panel delivery, payment receipt, etc.)</inlineHelpText>
        <label>Install Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Partner__c</fullName>
        <inlineHelpText>Partner on the install; we use this field here in order to calc the milestone payments correctly</inlineHelpText>
        <label>Install Partner</label>
        <picklist>
            <picklistValues>
                <fullName>1st Light Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A1 Solar Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acro Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Solar Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akeena Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alteris Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Solar - New Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arise Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona Solar Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASI Heating Air &amp; Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astralux Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonterra Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY Solar Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cotuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTEC Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eco Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Home Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenspring Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>groSolar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harmon Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HelioPower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HelioPower Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizon Solar Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imagine Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infinity Solar Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Islandwide</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installation_Type__c</fullName>
        <description>Indicates the kind of installation on the property.</description>
        <inlineHelpText>Is this a roof or ground installation?</inlineHelpText>
        <label>Installation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Installed Systems</relationshipLabel>
        <relationshipName>Generation_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interconnect_App_Complete__c</fullName>
        <description>Date when interconnection application has been finalized.  This is intended to be filled in directly by installers via the partner portal.</description>
        <label>Interconnect App Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inverter_Replacement_1__c</fullName>
        <label>Inverter Replacement 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inverter_Replacement_2__c</fullName>
        <label>Inverter Replacement 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inverter_Replacement_3__c</fullName>
        <label>Inverter Replacement 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Posted_Online__c</fullName>
        <inlineHelpText>Date the customer&apos;s upfront invoice is emailed to them and posted in their on line account.</inlineHelpText>
        <label>Invoice Posted Online</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_credit_report_on_original_P_CO_same__c</fullName>
        <formula>IF( 
AND ( 
Proposal__r.Current_Customer_Credit_Report__c &lt;&gt; Proposal__r.Original_Proposal_ID__r.Current_Customer_Credit_Report__c, 
NOT(ISBLANK(Proposal__r.Current_Customer_Credit_Report__c)), 
NOT(ISBLANK(Proposal__r.Original_Proposal_ID__r.Current_Customer_Credit_Report__c)) 
), &apos;No&apos;, &apos;Yes&apos;)</formula>
        <label>Is credit report on original P &amp; CO same</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Large_system_NTP_form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Large system NTP form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Layout_Rcvd__c</fullName>
        <description>for Proj coordinators to track when the roof layout is rec&apos;d post site audit</description>
        <label>Layout Rcvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Organization_Location__c</fullName>
        <inlineHelpText>Location of the lead org, e.g. Home Depot store, Nissan dealership</inlineHelpText>
        <label>Lead Organization Location</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Organization__c</fullName>
        <description>The organization that made the lead available to SR</description>
        <inlineHelpText>The organization that made the lead available to SR, e.g. Nissan, Solmentum</inlineHelpText>
        <label>Lead Source Organization</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Date__c</fullName>
        <description>Lease date for Credit Suisse assets</description>
        <label>Lease Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_ID__c</fullName>
        <description>ID of Lease
[Oracle ERP System Use Only]</description>
        <inlineHelpText>[Oracle ERP System Use Only]</inlineHelpText>
        <label>Lease ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Description__c</fullName>
        <description>Legal description of the property, used for compliance filings</description>
        <inlineHelpText>Legal description of the property, used for compliance filings</inlineHelpText>
        <label>Legal Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Local_Rebate_Amount__c</fullName>
        <inlineHelpText>If any local rebate is offered, like the GoSolar SF rebate, enter that info here</inlineHelpText>
        <label>Local Rebate Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Rebate_Final_Sent__c</fullName>
        <label>Local Rebate Final Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Rebate_Received__c</fullName>
        <label>Local Rebate Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Rebate_Reservation_Sent__c</fullName>
        <inlineHelpText>Date we sent the local rebate reservation, if applicable</inlineHelpText>
        <label>Local Rebate Reservation Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Rebate_Signed__c</fullName>
        <inlineHelpText>date final paperwork signed by SunRun</inlineHelpText>
        <label>Local Rebate Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Login_Email_Request_Sent_To_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Login Email Request Sent To Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Login_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Login Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <description>[Requested in TG-962, subtask of TG-904]</description>
        <label>Lot Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>M0_Amount_Paid__c</fullName>
        <label>M0 Amount Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M0_Credit_Amount__c</fullName>
        <label>M0 Credit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M0_Credit_Memo_Applied_On__c</fullName>
        <label>M0 Credit Memo Applied On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>M0_Payment_Date__c</fullName>
        <label>M0 Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M0_Payment__c</fullName>
        <formula>VALUE(TEXT(M0_Terms__c)) * EPC_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M0 Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M0_Terms__c</fullName>
        <label>M0 Terms</label>
        <picklist>
            <controllingField>Utility_Classification__c</controllingField>
            <picklistValues>
                <fullName>0.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>M1_Denied_Comments__c</fullName>
        <label>M1 Denied Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M1_Deposit_Acct__c</fullName>
        <description>M1 Deposit Account

(Requested in JIRA Ticket SFDC-30)</description>
        <label>M1 Deposit Acct</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M1_Deposit__c</fullName>
        <description>M1 Deposit Amount

(Requested in JIRA ticket SFDC-30)</description>
        <inlineHelpText>Indicates the M1 Deposit Amount</inlineHelpText>
        <label>M1 Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_Proof_Count__c</fullName>
        <label>M1 Proof Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Proof_Upload_Date__c</fullName>
        <label>M1 Proof Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M1_Status__c</fullName>
        <label>M1 Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>M1_amount_paid__c</fullName>
        <description>Actual amount paid for M1</description>
        <label>M1 amount paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_payment__c</fullName>
        <formula>CASE
(1, IF(and((CONTAINS( Installer__r.Name ,&quot;REC Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0),
(EPC_Price__c-Initial_Deposit_Amount__c)*M1_terms__c,
IF(ISPICKVAL(Install_Partner__c,&quot;Mercury Solar&quot;),1,0),(EPC_Price__c- Initial_Deposit_Amount__c )* M1_terms__c ,
IF(CONTAINS(Installer__r.Name,&quot;American Solar&quot;),1,0),M1_terms__c ,
IF(and((CONTAINS( Installer__r.Name ,&quot;UR Solar&quot;)), Verengo_Financed__c = TRUE),1,0), EPC_Price__c * 0,
IF(and((CONTAINS( Installer__r.Name ,&quot;UR Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0),
EPC_Price__c* M1_terms__c -Initial_Deposit_Amount__c,
IF(and((CONTAINS( Installer__r.Name ,&quot;UR Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;)), Verengo_Financed__c = TRUE),1,0), EPC_Price__c* 0,
IF(and((CONTAINS( Installer__r.Name ,&quot;American Electric&quot;)), Verengo_Financed__c = TRUE),1,0), EPC_Price__c * 0,
IF(and((CONTAINS( Installer__r.Name ,&quot;American Electric&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0),
EPC_Price__c* M1_terms__c -Initial_Deposit_Amount__c,
IF(and((CONTAINS( Installer__r.Name ,&quot;American Electric&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;)), Verengo_Financed__c = TRUE),1,0), EPC_Price__c * 0,
IF(and((CONTAINS( Installer__r.Name ,&quot;Trinity Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0),
(EPC_Price__c-Initial_Deposit_Amount__c)*M1_terms__c,
EPC_Price__c* M1_terms__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_payment_date__c</fullName>
        <inlineHelpText>Date finance paid M1</inlineHelpText>
        <label>M1 payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M1_proof_panel_inverter_delivery__c</fullName>
        <inlineHelpText>Date we received proof installation began (normally proof of panel or inverter delivery to site)</inlineHelpText>
        <label>M1 proof: panel/inverter delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M1_terms__c</fullName>
        <label>M1 terms</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Denied_Comments__c</fullName>
        <label>M2 Denied Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M2_Proof_Count__c</fullName>
        <label>M2 Proof Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Proof_Upload_Date__c</fullName>
        <label>M2 Proof Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_Serial_Number_Submitted_UserId__c</fullName>
        <label>M2 Serial Number Submitted  UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M2_Status__c</fullName>
        <label>M2 Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>M2_amount_paid__c</fullName>
        <description>Actual amount paid for M2</description>
        <label>M2 amount paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_month__c</fullName>
        <formula>DATE((year(  M2_proof_substantial_completion__c  )),(month(  M2_proof_substantial_completion__c  )),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_payment__c</fullName>
        <formula>CASE
(1,
IF(and((ISPICKVAL(Install_Partner__c,&quot;REC Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0),
(EPC_Price__c-Initial_Deposit_Amount__c)*M2_terms__c,
IF(ISPICKVAL(Install_Partner__c,&quot;Mercury Solar&quot;),1,0),(EPC_Price__c- Initial_Deposit_Amount__c )* M2_terms__c ,
IF(CONTAINS(Installer__r.Name,&quot;American Solar&quot;),1,0), (EPC_Price__c* M2_terms__c)-M1_terms__c ,
IF(and(M1_payment__c = 0,M1_terms__c&lt;&gt;0),1,0), 0,
IF(and((ISPICKVAL(Install_Partner__c,&quot;Trinity Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0),
(EPC_Price__c-Initial_Deposit_Amount__c)*M2_terms__c,
EPC_Price__c* M2_terms__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_payment_date__c</fullName>
        <label>M2 payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_proof_substantial_completion__c</fullName>
        <inlineHelpText>Date we received proof of substantial completion; normally an inspection certificate</inlineHelpText>
        <label>M2 proof:  substantial completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_terms__c</fullName>
        <label>M2 terms</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Denied_Comments__c</fullName>
        <label>M3 Denied Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M3_Proof_Count__c</fullName>
        <label>M3 Proof Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Proof_Upload_Date__c</fullName>
        <label>M3 Proof Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M3_Status__c</fullName>
        <label>M3 Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manual_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marked_As_Sold_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marked As Sold Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Generation Assets (Marked As Sold Rep)</relationshipLabel>
        <relationshipName>Generation_Assets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Status__c</fullName>
        <formula>Referral_Input__r.Customer_Portal_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Sent__c</fullName>
        <inlineHelpText>Date we sent the meter(s) to the partner</inlineHelpText>
        <label>Meter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meter_Serial_Num2__c</fullName>
        <inlineHelpText>Serial number on the 2nd meter if the installation has 2 meters</inlineHelpText>
        <label>Meter Serial Num2</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Serial_Num__c</fullName>
        <label>Meter Serial Num</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meter_Test_Conf__c</fullName>
        <description>[ITOPS-20] - Name Changed from &quot;Meter Test Conf&quot; to &quot;Meter Registration Conf&quot;</description>
        <displayFormat>MC{YY}{0}A</displayFormat>
        <label>Meter Registration Conf</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Meter_Test_Date__c</fullName>
        <description>[ITOPS-20] - Name Changed from &quot;Meter Test Date&quot; to &quot;Meter Registration Date&quot;</description>
        <label>Meter Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meter_Type__c</fullName>
        <label>Meter Type</label>
        <picklist>
            <picklistValues>
                <fullName>SS iTron</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SS Elster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metrum AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UMD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone_Deduction_Amount__c</fullName>
        <description>The amount owed to SR by a partner that should be deduced from M2</description>
        <label>Milestone Deduction Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Milestone_deduction_payment_date__c</fullName>
        <description>The date when the amount owed to SR by the installer was removed from the milestone payment</description>
        <label>-Milestone deduction payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Upfront_Payment_Amount__c</fullName>
        <description>upcharges for an APR of 7.99% on payment spread over 12 months, includes 2.5% for CC charges &quot;ineligible for cash discount&quot;</description>
        <formula>if(or(ispickval( Upfront_Payment_Plan__c ,&quot;12 Month Credit Card&quot;), ispickval( Upfront_Payment_Plan__c ,&quot;Test - 12 Month Credit Card&quot;)), (NULLVALUE(Upfront_Payment_to_Finance__c,Upfront_Payment_Amount__c)) *0.08629+( (NULLVALUE(Upfront_Payment_to_Finance__c,Upfront_Payment_Amount__c)) *0.025/12), if(or(ispickval( Upfront_Payment_Plan__c ,&quot;12 Month ACH&quot;), ispickval( Upfront_Payment_Plan__c ,&quot;Test - 12 Month ACH&quot;), ispickval( Upfront_Payment_Plan__c ,&quot;12 Month Invoice&quot;)),(NULLVALUE(Upfront_Payment_to_Finance__c,Upfront_Payment_Amount__c)) *0.08629, 0))</formula>
        <label>Monthly Upfront Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NTP_Granted__c</fullName>
        <inlineHelpText>Date on which we granted Notice to Proceed</inlineHelpText>
        <label>NTP Granted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NTP_Requested__c</fullName>
        <inlineHelpText>Enter the date the partner requested NTP</inlineHelpText>
        <label>NTP Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NYSERDA_Reported__c</fullName>
        <description>[Requested in SFDC-659]</description>
        <inlineHelpText>[Requested in SFDC-659]</inlineHelpText>
        <label>NYSERDA Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Managed Assets</relationshipLabel>
        <relationshipName>Generation_Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Action_Owner__c</fullName>
        <description>(Requested in JIRA Ticket SFDC-30)</description>
        <label>ISM Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>Alisha Kahle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gawain Harman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jon Trevor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justin Montante</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karlie Nieto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes_from_Partner__c</fullName>
        <label>Notes from Partner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_to_Partner__c</fullName>
        <label>Notes to Partner</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Customer_of_Web_Acct__c</fullName>
        <inlineHelpText>Date we send customer info re: their web account (after PTO)</inlineHelpText>
        <label>Notify Customer of Web Acct</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Meters__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Number of meters sent for the installation</inlineHelpText>
        <label>Number of Meters</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sunrun_owned_Modules__c</fullName>
        <label>Number of Sunrun-Owned Panels</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Generation Assets</relationshipLabel>
        <relationshipName>Generation_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityIdText__c</fullName>
        <formula>Opportunity_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityIdText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Generation Assets</relationshipLabel>
        <relationshipName>R00N60000001ZOT9EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sales_Representative__c</fullName>
        <formula>Opportunity_Name__r.Sales_Representative__r.FirstName &amp; &quot; &quot; &amp; Opportunity_Name__r.Sales_Representative__r.LastName</formula>
        <label>Opportunity: Sales Representative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Asset_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Oracle Asset Processing Status</description>
        <inlineHelpText>Oracle Asset Processing Status</inlineHelpText>
        <label>Oracle Asset Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oracle_Site_Number__c</fullName>
        <description>Oracle Site (Property) Number (ERP Project)</description>
        <inlineHelpText>Oracle Site (Property) Number (ERP Project)</inlineHelpText>
        <label>Oracle Site Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Full_System_Cost__c</fullName>
        <inlineHelpText>Full system cost based on original system design</inlineHelpText>
        <label>Original Full System Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Price_per_kWh__c</fullName>
        <inlineHelpText>Price per kWh based on original system design</inlineHelpText>
        <label>Original Price per kWh</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
</CustomObject>